k8s/api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: auth-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: api
      app.kubernetes.io/component: server
      app.kubernetes.io/part-of: auth-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: auth-app
    spec:
      containers:
        - name: api
          image: dymafr/projet5-node:dd9fcbd
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: '512Mi'
              cpu: '250m'
          livenessProbe:
            httpGet:
              path: /api/user/current
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /api/user/current
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
      imagePullSecrets:
        - name: docker-hub-secret
